[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "Logbook Backup Mover"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2022-10-08-Logbook-Backup-Mover"
version     = "1.0.1"

[tool.poetry.dependencies]
dropbox    = "^11.36.2"
kfsconfig  = "^1.0.0"
kfsdropbox = "^1.0.0"
kfsfstr    = "^1.0.0"
kfslog     = "^1.0.0"
python     = "^3.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
